# SAR_Capstone

./: .gitignore  CMakeLists.txt  README.md  package.xml
41068_ignition_bringup/: CMakeLists.txt  README.md  package.xml
41068_ignition_bringup/bt/: custom_navigate_to_pose.xml
41068_ignition_bringup/config/: 41068.rviz  gazebo_bridge.yaml  nav2_params.yaml  robot_localization.yaml  slam_params.yaml
41068_ignition_bringup/launch/: 41068_ignition.launch.py  41068_navigation.launch.py
41068_ignition_bringup/models/Buildings/watchtower_new/: model_new.config  model_new.sdf
41068_ignition_bringup/models/Buildings/watchtower_new/meshes/: watchtower_new.mtl
41068_ignition_bringup/models/dry_bush/: model.config  model.sdf
41068_ignition_bringup/models/dry_bush/meshes/: untitled.mtl
41068_ignition_bringup/models/forest_plane/: model.sdf
41068_ignition_bringup/models/forest_wall/: model.config
41068_ignition_bringup/models/grass_plane/: model.sdf
41068_ignition_bringup/models/humans/man/: model.config  model.sdf
41068_ignition_bringup/models/humans/man/meshes/: Man_Man.mtl
41068_ignition_bringup/models/lamp/: model.config  model.sdf
41068_ignition_bringup/models/lamp/meshes/: street_lamp.dae
41068_ignition_bringup/models/linea2/: model.config  model.sdf
41068_ignition_bringup/models/linea2/meshes/cable/: cables3.dae
41068_ignition_bringup/models/linea2/meshes/post/: postes2.dae
41068_ignition_bringup/models/suv/: model.sdf
41068_ignition_bringup/urdf/: husky.gazebo.xacro  husky.urdf.xacro  wheel.urdf.xacro
41068_ignition_bringup/worlds/: extra_large.sdf  large.sdf  simple_trees.sdf
battery_node/: package.xml  setup.cfg  setup.py
battery_node/battery_node/: battery_node.py
bt_coordinator/: package.xml  setup.cfg  setup.py
bt_coordinator/bt_coordinator/: coordinator.py  global_path_planner.py
champ_base/: package.xml
champ_config/config/gait/: gait.yaml
champ_config/config/joints/: joints.yaml
champ_config/config/links/: links.yaml
config/: 41068.rviz  cartographer_2d.lua  cartographer_3d.lua  gazebo_bridge.yaml  nav2_params.yaml  robot_localization.yaml  slam_params.yaml
custom_tools/: CMakeLists.txt  package.xml  setup.cfg  setup.py
custom_tools/custom_tools/: cloud_accumulator.cpp  night_vision_camera_node.py  toggle_time_node.py
launch/: 41068_autoslam.launch.py  41068_cartographer2d.launch.py  41068_cartographer3d.launch.py  41068_cartographer_mode.launch.py  41068_ignition.launch.py  41068_navigation.launch.py
log/: latest_list
models/forest_plane/: model.config
models/forest_wall/: model.sdf
models/grass_plane/: model.config
scripts/: auto_explore_waypoints.py
spot_bringup/spot_bringup/: thermal_to_rgb.py
spot_description/: CMakeLists.txt  package.xml
spot_description/models/spot/: README.md  model.config  model.sdf  model.urdf
spot_gazebo/: CMakeLists.txt
spot_gazebo/config/: gui.config
spot_gazebo/worlds/: electrical_substation.sdf
spot_gazebo/worlds/meshes/collision/: Edgar_Section_09.stl  Edgar_StartingArea.stl
spot_gazebo/worlds/meshes/visual/: Edgar_Section_03.dae  Edgar_StartingArea.dae
spot_gazebo_ros2/: .gitignore  README.md
spot_gazebo_ros2/champ_base/src/: quadruped_controller.cpp
spot_gazebo_ros2/champ_config/: CMakeLists.txt  package.xml
spot_gazebo_ros2/spot_bringup/: package.xml  setup.cfg  setup.py
spot_gazebo_ros2/spot_bringup/config/: spot.rviz  spot_bridge.yaml
spot_gazebo_ros2/spot_bringup/launch/: spot.gazebo.launch.py
spot_gazebo_ros2/spot_description/: README.md
spot_gazebo_ros2/spot_gazebo/: package.xml
spot_gazebo_ros2/spot_gazebo/worlds/: edgar_mine.sdf  empty_room.sdf  simple_tunnel.sdf
spot_gazebo_ros2/spot_gazebo/worlds/meshes/collision/: Edgar_Section_08.stl
spot_gazebo_ros2/spot_gazebo/worlds/meshes/visual/: Edgar_Section_08.dae  Edgar_Section_09.dae
spot_gazebo_ros2/spot_navigation/: package.xml
spot_gazebo_ros2/spot_navigation/config/: dlo_localization.rviz  dlo_mapping.rviz  localization.yaml
spot_gazebo_ros2/spot_navigation/launch/: dlo.launch.py  dlo.localization.launch.py  planner.launch.py  spot.navigation.launch.py
spot_gazebo_ros2/spot_navigation/rviz/: dlo_localization.rviz
spot_navigation/: setup.cfg  setup.py
spot_navigation/config/: dlo.yaml
spot_navigation/launch/: dlo.mapping.launch.py
spot_navigation/rviz/: dlo.rviz
usergui/: CMakeLists.txt  main.cpp  package.xml  usergui_en_AU.ts  userinterface.cpp  userinterface.h  userinterface.ui
worlds/: large_demo.sdf
yolo_detector/: package.xml  setup.py
yolo_detector/yolo_detector/: yolo_detector_node.py
