cmake_minimum_required(VERSION 3.8)
project(41068_ignition_bringup)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)

find_package(ros_ign_interfaces REQUIRED)

install(
  DIRECTORY config launch models urdf worlds yolo bt
  DESTINATION share/${PROJECT_NAME}
)

install(FILES worlds/large.sdf
        DESTINATION share/${PROJECT_NAME}/worlds)

install(FILES worlds/extra_large.sdf
        DESTINATION share/${PROJECT_NAME}/worlds)        

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
