<?xml version="1.0"?>
<package format="3">
  <name>champ_config</name>
  <version>0.1.0</version>
  <description>CHAMP Config Package</description>

  <maintainer email="jimenojmm@gmail.com">Juan Miguel Jimeno</maintainer>
  <author>Juan Miguel Jimeno</author>

  <license>BSD</license>

  <depend>champ_base</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
