<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo-specific implementations for the spot_gazebo project</description>
  <maintainer email="ygao@missouri.edu">Yixiang Gao</maintainer>
  <license>Apache 2.0</license>
  <author>Yixiang Gao</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>spot_description</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

